--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,8 @@
 
 /* Avatar */
 .avatar {
-	width: 8rem;             /* 128px */
-	height: 8rem;
+	width: 20rem !important;             /* 128px */
+	height: 20rem !important;
 	border-radius: 50%;
 	object-fit: cover;
 	background-position: center;
