--- a/css/brands.css
+++ b/css/brands.css
@@ -545,7 +545,7 @@
 /* Şefin Tavsiyeleri */
 .button--efin-tavsiyeleri {
     --button-text: #ffffff;
-    --button-background: #034731;
+    --button-background: #C06B3E;
     
 }
 
